--- a/settings.gradle
+++ b/settings.gradle
@@ -1,17 +1,17 @@
 include 'analytics-core'
-include 'analytics-integrations:analytics-integration-amplitude'
-include 'analytics-integrations:analytics-integration-appsflyer'
-include 'analytics-integrations:analytics-integration-bugsnag'
-include 'analytics-integrations:analytics-integration-countly'
-include 'analytics-integrations:analytics-integration-crittercism'
-include 'analytics-integrations:analytics-integration-flurry'
-include 'analytics-integrations:analytics-integration-ga'
-include 'analytics-integrations:analytics-integration-kahuna'
-include 'analytics-integrations:analytics-integration-localytics'
-include 'analytics-integrations:analytics-integration-leanplum'
-include 'analytics-integrations:analytics-integration-mixpanel'
-include 'analytics-integrations:analytics-integration-quantcast'
-include 'analytics-integrations:analytics-integration-tapstream'
+include 'analytics-integrations:amplitude'
+include 'analytics-integrations:appsflyer'
+include 'analytics-integrations:bugsnag'
+include 'analytics-integrations:countly'
+include 'analytics-integrations:crittercism'
+include 'analytics-integrations:flurry'
+include 'analytics-integrations:google-analytics'
+include 'analytics-integrations:kahuna'
+include 'analytics-integrations:localytics'
+include 'analytics-integrations:leanplum'
+include 'analytics-integrations:mixpanel'
+include 'analytics-integrations:quantcast'
+include 'analytics-integrations:tapstream'
 include 'analytics-wear'
 include 'analytics'
 include 'analytics-sample'
