update sourceCompatibility to Java 7, remove org.gradle.jvmargs and fix checkstyle errors

--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,11 @@ subprojects {
         packagingOptions {
           exclude 'LICENSE.txt'
         }
+
+        compileOptions {
+          sourceCompatibility JavaVersion.VERSION_1_7
+          targetCompatibility JavaVersion.VERSION_1_7
+        }
       }
     }
   }
