--- a/circle.yml
+++ b/circle.yml
@@ -7,6 +7,7 @@ dependencies:
   cache_directories:
     - ~/.android
     - ~/android
+    - ~/.gradle
   override:
     - .buildscript/install-dependencies.sh
 test:
