--- a/build.gradle
+++ b/build.gradle
@@ -90,5 +90,6 @@ ext.testLibraries = [
   'org.powermock:powermock-module-junit4:1.5.6',
   'org.powermock:powermock-module-junit4-rule:1.5.6',
   'org.powermock:powermock-api-mockito:1.5.6',
-  'org.powermock:powermock-classloading-xstream:1.5.6'
+  'org.powermock:powermock-classloading-xstream:1.5.6',
+  'com.squareup.okhttp:mockwebserver:2.2.0'
 ]
