--- a/analytics-integrations/localytics/build.gradle
+++ b/analytics-integrations/localytics/build.gradle
@@ -1,26 +1,6 @@
-apply plugin: 'android-sdk-manager'
-apply plugin: 'com.android.library'
-
-buildscript {
-  dependencies {
-    classpath rootProject.ext.plugins.android
-    classpath rootProject.ext.plugins.sdkManager
-    classpath rootProject.ext.plugins.androidUnitTest
-  }
-}
-
-apply from: rootProject.file('gradle/integration-test.gradle')
+apply from: rootProject.file('gradle/integration.gradle')
 
 dependencies {
-  provided project(':analytics-core')
   provided rootProject.ext.libraries.supportLib
   compile files('libs/Localytics-2.7.1.jar')
-
-  testCompile rootProject.ext.testLibraries
-  testCompile project(path: ':analytics-core', configuration: 'testOutput')
 }
-
-apply from: rootProject.file('gradle/checkstyle-library.gradle')
-apply from: rootProject.file('gradle/attach-jar.gradle')
-apply from: rootProject.file('gradle/attach-jar-with-dependencies.gradle')
-apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
