--- a/analytics-sample/build.gradle
+++ b/analytics-sample/build.gradle
@@ -1,29 +1,13 @@
 apply plugin: 'android-sdk-manager'
 apply plugin: 'com.android.application'
 
-buildscript {
-  dependencies {
-    classpath rootProject.ext.plugins.android
-    classpath rootProject.ext.plugins.sdkManager
-  }
-}
+apply from: rootProject.file('gradle/android.gradle')
 
 dependencies {
-  // repositories { maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' } }
-  // compile('com.segment.analytics.android:all:2.4.4-SNAPSHOT@aar') {
-  //   transitive = true
-  // }
   compile project(':analytics-core')
-  compile project(':analytics-wear') // only required for Android Wear apps
-}
 
-android {
-  buildTypes {
-    release {
-      minifyEnabled false
-      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
-    }
-  }
+  // only required for Android Wear apps
+  compile project(':analytics-wear')
 }
 
 apply from: rootProject.file('gradle/checkstyle-app.gradle')
