--- a/analytics-wear-sample/build.gradle
+++ b/analytics-wear-sample/build.gradle
@@ -1,33 +1,16 @@
 apply plugin: 'android-sdk-manager'
 apply plugin: 'com.android.application'
 
-buildscript {
-  dependencies {
-    classpath rootProject.ext.plugins.android
-    classpath rootProject.ext.plugins.sdkManager
-  }
-}
-
-dependencies {
-  // repositories { maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' } }
-  // compile('com.segment.analytics.android:all:2.4.4-SNAPSHOT@aar') {
-  //   transitive = true
-  // }
-  compile project(':analytics-wear')
-  compile rootProject.ext.libraries.supportWearable
-}
-
+apply from: rootProject.file('gradle/android.gradle')
 android {
   defaultConfig {
     minSdkVersion rootProject.ext.minSdkVersionWear
   }
+}
 
-  buildTypes {
-    release {
-      minifyEnabled false
-      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
-    }
-  }
+dependencies {
+  compile project(':analytics-wear')
+  compile rootProject.ext.libraries.supportWearable
 }
 
 apply from: rootProject.file('gradle/checkstyle-app.gradle')
