--- a/analytics-wear/build.gradle
+++ b/analytics-wear/build.gradle
@@ -1,12 +1,7 @@
 apply plugin: 'android-sdk-manager'
 apply plugin: 'com.android.library'
 
-buildscript {
-  dependencies {
-    classpath rootProject.ext.plugins.android
-    classpath rootProject.ext.plugins.sdkManager
-  }
-}
+apply from: rootProject.file('gradle/android.gradle')
 
 dependencies {
   compile project(':analytics-core')
@@ -16,9 +11,3 @@ dependencies {
 apply from: rootProject.file('gradle/checkstyle-library.gradle')
 apply from: rootProject.file('gradle/attach-jar.gradle')
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
-
-// todo: move this to the gradle-mvn-push script
-afterEvaluate {
-  androidJavadocs.classpath +=
-      project.android.libraryVariants.toList().first().javaCompile.classpath
-}
