--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,14 @@
+buildscript {
+  repositories {
+    jcenter()
+  }
+  dependencies {
+    classpath 'com.android.tools.build:gradle:1.0.0'
+    classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.12.0'
+    classpath 'com.github.jcandksolutions.gradle:android-unit-test:2.1.1'
+  }
+}
+
 allprojects {
   buildscript {
     repositories {
@@ -15,38 +26,6 @@ allprojects {
   version = VERSION_NAME
 }
 
-subprojects {
-  project.plugins.whenPluginAdded { plugin ->
-    if ("com.android.build.gradle.LibraryPlugin".equals(plugin.class.name) ||
-        "com.android.build.gradle.AppPlugin".equals(plugin.class.name)) {
-      android {
-        compileSdkVersion rootProject.ext.compileSdkVersion
-        buildToolsVersion rootProject.ext.buildToolsVersion
-
-        defaultConfig {
-          minSdkVersion rootProject.ext.minSdkVersion
-          targetSdkVersion rootProject.ext.targetSdkVersion
-          versionCode rootProject.ext.versionCode
-          versionName rootProject.ext.versionName
-        }
-
-        dexOptions {
-          preDexLibraries rootProject.ext.preDexLibraries
-        }
-
-        packagingOptions {
-          exclude 'LICENSE.txt'
-        }
-
-        compileOptions {
-          sourceCompatibility JavaVersion.VERSION_1_7
-          targetCompatibility JavaVersion.VERSION_1_7
-        }
-      }
-    }
-  }
-}
-
 
 def isCI = "true".equals(System.getenv("CIRCLECI"))
 def preDexEnabled = "true".equals(System.getProperty("preDex", "true"))
@@ -61,31 +40,33 @@ ext {
   compileSdkVersion = 21
   buildToolsVersion = '21.1.1'
 
+  compileJavaVersion = JavaVersion.VERSION_1_7
+
   preDexLibraries = preDexEnabled && !isCI
 }
 
 ext.plugins = [
-  android        : 'com.android.tools.build:gradle:1.0.0',
-  sdkManager     : 'com.jakewharton.sdkmanager:gradle-plugin:0.12.0',
-  androidUnitTest: 'com.github.jcandksolutions.gradle:android-unit-test:2.1.1'
+    android        : 'com.android.tools.build:gradle:1.0.0',
+    sdkManager     : 'com.jakewharton.sdkmanager:gradle-plugin:0.12.0',
+    androidUnitTest: 'com.github.jcandksolutions.gradle:android-unit-test:2.1.1'
 ]
 
 ext.libraries = [
-  playWearable   : 'com.google.android.gms:play-services-wearable:6.5.87',
-  supportLib     : 'com.android.support:support-v4:21.0.2',
-  supportWearable: 'com.google.android.support:wearable:1.0.0',
-  googleAnalytics: 'com.google.android.gms:play-services-base:6.5.87'
+    playWearable   : 'com.google.android.gms:play-services-wearable:6.5.87',
+    supportLib     : 'com.android.support:support-v4:21.0.2',
+    supportWearable: 'com.google.android.support:wearable:1.0.0',
+    googleAnalytics: 'com.google.android.gms:play-services-base:6.5.87'
 ]
 
 ext.testLibraries = [
-  'junit:junit:4.11',
-  'org.robolectric:robolectric:2.3',
-  'org.mockito:mockito-core:1.10.8',
-  'org.assertj:assertj-core:1.7.0',
-  'org.powermock:powermock:1.5.6',
-  'org.powermock:powermock-module-junit4:1.5.6',
-  'org.powermock:powermock-module-junit4-rule:1.5.6',
-  'org.powermock:powermock-api-mockito:1.5.6',
-  'org.powermock:powermock-classloading-xstream:1.5.6',
-  'com.squareup.okhttp:mockwebserver:2.2.0'
+    'junit:junit:4.11',
+    'org.robolectric:robolectric:2.3',
+    'org.mockito:mockito-core:1.10.8',
+    'org.assertj:assertj-core:1.7.0',
+    'org.powermock:powermock:1.5.6',
+    'org.powermock:powermock-module-junit4:1.5.6',
+    'org.powermock:powermock-module-junit4-rule:1.5.6',
+    'org.powermock:powermock-api-mockito:1.5.6',
+    'org.powermock:powermock-classloading-xstream:1.5.6',
+    'com.squareup.okhttp:mockwebserver:2.2.0'
 ]
