--- a/gradle/integration.gradle
+++ b/gradle/integration.gradle
@@ -1,3 +1,4 @@
+// Defines configuration common to all our integrations
 apply plugin: 'android-sdk-manager'
 apply plugin: 'com.android.library'
 
@@ -14,12 +15,13 @@ androidUnitTest {
 }
 
 dependencies {
-  provided rootProject.ext.libraries.googleAnalytics
+  provided project(':analytics-core')
+
   testCompile rootProject.ext.testLibraries
+  testCompile project(path: ':analytics-core', configuration: 'testOutput')
 }
 
 apply from: rootProject.file('gradle/checkstyle-library.gradle')
 apply from: rootProject.file('gradle/attach-jar.gradle')
-apply from: rootProject.file('gradle/attach-test-jar.gradle')
+apply from: rootProject.file('gradle/attach-jar-with-dependencies.gradle')
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
-
