Wear module will declare provided dependency on core

--- a/analytics-wear-sample/build.gradle
+++ b/analytics-wear-sample/build.gradle
@@ -9,6 +9,7 @@ android {
 }
 
 dependencies {
+  compile project(':analytics-core')
   compile project(':analytics-wear')
   compile rootProject.ext.libraries.supportWearable
 }
