--- a/analytics-integrations/localytics/build.gradle
+++ b/analytics-integrations/localytics/build.gradle
@@ -1,6 +1,6 @@
 apply from: rootProject.file('gradle/integration.gradle')
 
 dependencies {
-  provided rootProject.ext.libraries.supportLib
-  compile files('libs/Localytics-2.7.1.jar')
+  compile rootProject.ext.libraries.supportLib
+  compile files('libs/Localytics-3.1.0.jar')
 }
