--- a/analytics-integrations/tapstream/build.gradle
+++ b/analytics-integrations/tapstream/build.gradle
@@ -1,6 +1,6 @@
 apply from: rootProject.file('gradle/integration.gradle')
 
 dependencies {
-  provided rootProject.ext.libraries.supportLib
+  compile rootProject.ext.libraries.googleAnalytics
   compile files('libs/Tapstream-2.8.2.jar')
 }
