Dont attach JARs

--- a/analytics-core/build.gradle
+++ b/analytics-core/build.gradle
@@ -19,7 +19,7 @@ dependencies {
 }
 
 apply from: rootProject.file('gradle/checkstyle-library.gradle')
-apply from: rootProject.file('gradle/attach-jar.gradle')
+// apply from: rootProject.file('gradle/attach-jar.gradle')
 apply from: rootProject.file('gradle/attach-test-jar.gradle')
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
 
