--- a/analytics-integrations/localytics/gradle.properties
+++ b/analytics-integrations/localytics/gradle.properties
@@ -1,3 +1,3 @@
 POM_NAME=Localytics Integration for Segment Android Analytics
 POM_ARTIFACT_ID=analytics-integration-localytics
-POM_PACKAGING=jar
+POM_PACKAGING=aar
