--- a/analytics-integrations/amplitude/gradle.properties
+++ b/analytics-integrations/amplitude/gradle.properties
@@ -1,3 +1,3 @@
 POM_NAME=Amplitude Integration for Segment Android Analytics
 POM_ARTIFACT_ID=analytics-integration-amplitude
-POM_PACKAGING=jar
+POM_PACKAGING=aar
