--- a/analytics-integrations/bugsnag/gradle.properties
+++ b/analytics-integrations/bugsnag/gradle.properties
@@ -1,3 +1,3 @@
 POM_NAME=Bugsnag Integration for Segment Android Analytics
 POM_ARTIFACT_ID=analytics-integration-bugsnag
-POM_PACKAGING=jar
+POM_PACKAGING=aar
