--- a/analytics-integrations/kahuna/gradle.properties
+++ b/analytics-integrations/kahuna/gradle.properties
@@ -1,3 +1,3 @@
 POM_NAME=Kahuna Integration for Segment Android Analytics
 POM_ARTIFACT_ID=analytics-integration-kahuna
-POM_PACKAGING=jar
+POM_PACKAGING=aar
