--- a/analytics-wear/build.gradle
+++ b/analytics-wear/build.gradle
@@ -9,5 +9,5 @@ dependencies {
 }
 
 apply from: rootProject.file('gradle/checkstyle-library.gradle')
-apply from: rootProject.file('gradle/attach-jar.gradle')
+// apply from: rootProject.file('gradle/attach-jar.gradle')
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
