--- a/gradle/integration.gradle
+++ b/gradle/integration.gradle
@@ -22,6 +22,6 @@ dependencies {
 }
 
 apply from: rootProject.file('gradle/checkstyle-library.gradle')
-apply from: rootProject.file('gradle/attach-jar.gradle')
-apply from: rootProject.file('gradle/attach-jar-with-dependencies.gradle')
+// apply from: rootProject.file('gradle/attach-jar.gradle')
+// apply from: rootProject.file('gradle/attach-jar-with-dependencies.gradle')
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
