--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,7 @@ allprojects {
   version = VERSION_NAME
 }
 
-
-def isCI = "true".equals(System.getenv("CIRCLECI"))
+def isCI = "true".equals(System.getenv("TRAVIS"))
 def preDexEnabled = "true".equals(System.getProperty("preDex", "true"))
 
 ext {
