--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,7 @@ include 'analytics-core'
 include 'analytics-core-tests'
 include 'analytics-integrations:amplitude'
 include 'analytics-integrations:appsflyer'
+include 'analytics-integrations:apptimize'
 include 'analytics-integrations:bugsnag'
 include 'analytics-integrations:countly'
 include 'analytics-integrations:crittercism'
@@ -17,3 +18,4 @@ include 'analytics-wear'
 include 'analytics'
 include 'analytics-sample'
 include 'analytics-wear-sample'
+
