Add Segment integration for Apptimize

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,7 @@ include 'analytics-core'
 include 'analytics-core-tests'
 include 'analytics-integrations:amplitude'
 include 'analytics-integrations:appsflyer'
+include 'analytics-integrations:apptimize'
 include 'analytics-integrations:bugsnag'
 include 'analytics-integrations:countly'
 include 'analytics-integrations:crittercism'
