Adding bundled integration for MoEngage SDK

--- a/settings.gradle
+++ b/settings.gradle
@@ -12,6 +12,7 @@ include 'analytics-integrations:kahuna'
 include 'analytics-integrations:localytics'
 include 'analytics-integrations:leanplum'
 include 'analytics-integrations:mixpanel'
+include 'analytics-integrations:moengage'
 include 'analytics-integrations:quantcast'
 include 'analytics-integrations:tapstream'
 include 'analytics-integrations:taplytics'
