--- a/settings.gradle
+++ b/settings.gradle
@@ -14,6 +14,7 @@ include 'analytics-integrations:leanplum'
 include 'analytics-integrations:mixpanel'
 include 'analytics-integrations:quantcast'
 include 'analytics-integrations:tapstream'
+include 'analytics-integrations:uxcam'
 include 'analytics-wear'
 include 'analytics'
 include 'analytics-sample'
