--- a/settings.gradle
+++ b/settings.gradle
@@ -15,6 +15,7 @@ include 'analytics-integrations:mixpanel'
 include 'analytics-integrations:quantcast'
 include 'analytics-integrations:tapstream'
 include 'analytics-integrations:taplytics'
+include 'analytics-integrations:uxcam'
 include 'analytics-wear'
 include 'analytics'
 include 'analytics-sample'
