--- a/analytics/build.gradle
+++ b/analytics/build.gradle
@@ -17,6 +17,7 @@ dependencies {
   compile project(':analytics-integrations:taplytics')
   compile project(':analytics-integrations:quantcast')
   compile project(':analytics-integrations:tapstream')
+  compile project(':analytics-integrations:uxcam')
 }
 
 apply from: rootProject.file('gradle/android.gradle')
