Stress test SegmentDispatcher and Thread test for Queue File

--- a/analytics-core/build.gradle
+++ b/analytics-core/build.gradle
@@ -6,3 +6,9 @@ apply from: rootProject.file('gradle/checkstyle-library.gradle')
 apply from: rootProject.file('gradle/attach-jar.gradle')
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
 
+dependencies {
+
+    //testCompile 'junit:junit:4.12'
+    //androidTestCompile 'junit:junit:4.12'
+    androidTestCompile 'com.android.support.test:testing-support-lib:0.1'
+}
