Better group support

--- a/analytics/build.gradle
+++ b/analytics/build.gradle
@@ -2,21 +2,21 @@ apply plugin: 'com.android.library'
 
 dependencies {
   compile project(':analytics-core')
-  compile project(':analytics-integrations:amplitude')
-  compile project(':analytics-integrations:appsflyer')
-  compile project(':analytics-integrations:apptimize')
-  compile project(':analytics-integrations:bugsnag')
-  compile project(':analytics-integrations:countly')
-  compile project(':analytics-integrations:crittercism')
-  compile project(':analytics-integrations:flurry')
-  compile project(':analytics-integrations:google-analytics')
-  compile project(':analytics-integrations:kahuna')
-  compile project(':analytics-integrations:localytics')
-  compile project(':analytics-integrations:leanplum')
-  compile project(':analytics-integrations:mixpanel')
+//  compile project(':analytics-integrations:amplitude')
+//  compile project(':analytics-integrations:appsflyer')
+//  compile project(':analytics-integrations:apptimize')
+//  compile project(':analytics-integrations:bugsnag')
+//  compile project(':analytics-integrations:countly')
+//  compile project(':analytics-integrations:crittercism')
+//  compile project(':analytics-integrations:flurry')
+//  compile project(':analytics-integrations:google-analytics')
+//  compile project(':analytics-integrations:kahuna')
+//  compile project(':analytics-integrations:localytics')
+//  compile project(':analytics-integrations:leanplum')
+//  compile project(':analytics-integrations:mixpanel')
   compile project(':analytics-integrations:taplytics')
-  compile project(':analytics-integrations:quantcast')
-  compile project(':analytics-integrations:tapstream')
+//  compile project(':analytics-integrations:quantcast')
+//  compile project(':analytics-integrations:tapstream')
 }
 
 apply from: rootProject.file('gradle/android.gradle')
