--- a/settings.gradle
+++ b/settings.gradle
@@ -1,19 +1,19 @@
 include 'analytics-core'
 include 'analytics-core-tests'
-include 'analytics-integrations:amplitude'
-include 'analytics-integrations:appsflyer'
-include 'analytics-integrations:apptimize'
-include 'analytics-integrations:bugsnag'
-include 'analytics-integrations:countly'
-include 'analytics-integrations:crittercism'
-include 'analytics-integrations:flurry'
-include 'analytics-integrations:google-analytics'
-include 'analytics-integrations:kahuna'
-include 'analytics-integrations:localytics'
-include 'analytics-integrations:leanplum'
-include 'analytics-integrations:mixpanel'
-include 'analytics-integrations:quantcast'
-include 'analytics-integrations:tapstream'
+//include 'analytics-integrations:amplitude'
+//include 'analytics-integrations:appsflyer'
+//include 'analytics-integrations:apptimize'
+//include 'analytics-integrations:bugsnag'
+//include 'analytics-integrations:countly'
+//include 'analytics-integrations:crittercism'
+//include 'analytics-integrations:flurry'
+//include 'analytics-integrations:google-analytics'
+//include 'analytics-integrations:kahuna'
+//include 'analytics-integrations:localytics'
+//include 'analytics-integrations:leanplum'
+//include 'analytics-integrations:mixpanel'
+//include 'analytics-integrations:quantcast'
+//include 'analytics-integrations:tapstream'
 include 'analytics-integrations:taplytics'
 include 'analytics-wear'
 include 'analytics'
