--- a/analytics-integrations/moengage/build.gradle
+++ b/analytics-integrations/moengage/build.gradle
@@ -5,5 +5,11 @@ dependencies {
     compile rootProject.ext.supportLib
     compile 'com.google.android.gms:play-services-ads:7.3.0'
     compile 'com.google.android.gms:play-services-gcm:7.3.0'
-    compile files('libs/moengage_sdkv5.0.6.jar')
+    compile (name:'moengagesdk_v5.0.6', ext:'aar')
+}
+
+repositories{
+    flatDir {
+        dirs 'libs'
+    }
 }
