--- a/analytics-integrations/quantcast/build.gradle
+++ b/analytics-integrations/quantcast/build.gradle
@@ -2,5 +2,5 @@ apply from: rootProject.file('gradle/integration.gradle')
 
 dependencies {
   compile rootProject.ext.supportLib
-  compile files('libs/Quantcast-1.2.5.jar')
+  compile 'com.quantcast.android.measurement:QuantcastAndroidSdk-split:1.2.7'
 }
