Retrieves Apptimize as a Gradle dependency instead of a Jar Utilitizing Gradle to retrieve the dependency allows for Gradle transitivity in dependency management.

--- a/analytics-integrations/apptimize/build.gradle
+++ b/analytics-integrations/apptimize/build.gradle
@@ -1,6 +1,6 @@
 apply from: rootProject.file('gradle/integration.gradle')
 
 dependencies {
-  compile files('libs/apptimize-android-2.8.0.jar')
+  compile 'com.apptimize:apptimize-android:2.8.0'
 }
 
