Adds integration with Adjust

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,6 @@
 include 'analytics-core'
 include 'analytics-core-tests'
+include 'analytics-integrations:adjust'
 include 'analytics-integrations:amplitude'
 include 'analytics-integrations:appsflyer'
 include 'analytics-integrations:apptimize'
