[gradle-release-task] prepare release 3.1.5

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 GROUP=com.segment.analytics.android
 
 VERSION_CODE=315
-VERSION_NAME=3.1.5-SNAPSHOT
+VERSION_NAME=3.1.5
 
 POM_NAME=Segment for Android
 POM_DESCRIPTION=The hassle-free way to add analytics to your Android app.
