UXCam lib updated to v2.0.6

--- a/analytics-integrations/uxcam/build.gradle
+++ b/analytics-integrations/uxcam/build.gradle
@@ -1,5 +1,5 @@
 apply from: rootProject.file('gradle/integration.gradle')
 
 dependencies {
-    compile files('libs/UXCam-2.0.3.jar')
+    compile files('libs/uxcam-2.0.6.jar')
 }
