[gradle-release-task] prepare release 3.1.9

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 GROUP=com.segment.analytics.android
 
-VERSION_CODE=321
-VERSION_NAME=3.2.1-SNAPSHOT
+VERSION_CODE=319
+VERSION_NAME=3.1.9
 
 POM_NAME=Segment for Android
 POM_DESCRIPTION=The hassle-free way to add analytics to your Android app.
