[gradle-release-task] prepare for next development iteration

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 GROUP=com.segment.analytics.android
 
-VERSION_CODE=319
-VERSION_NAME=3.1.9
+VERSION_CODE=3110
+VERSION_NAME=3.1.10-SNAPSHOT
 
 POM_NAME=Segment for Android
 POM_DESCRIPTION=The hassle-free way to add analytics to your Android app.
