--- a/circle.yml
+++ b/circle.yml
@@ -17,12 +17,14 @@ dependencies:
     - ~/android
     - ~/.gradle
   override:
-    - ./scripts/setup.sh
+    - .buildscript/setup.sh
     - TERM=dumb ./gradlew dependencies
 
 test:
   override:
-    - TERM=dumb ./gradlew assembleRelease checkRelease testRelease
+    - TERM=dumb ./gradlew assembleRelease
+    - TERM=dumb ./gradlew checkRelease
+    - TERM=dumb ./gradlew testRelease
 
 deployment:
   snapshots:
