update caching location

--- a/circle.yml
+++ b/circle.yml
@@ -13,9 +13,9 @@ machine:
 
 dependencies:
   cache_directories:
-    - ~/.android
-    - ~/android
-    - ~/.gradle
+    - /home/ubuntu/.android
+    - /home/ubuntu/android
+    - /home/ubuntu/.gradle
   override:
     - .buildscript/setup.sh
     - TERM=dumb ./gradlew dependencies
