--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 GROUP=com.segment.analytics.android
 
 VERSION_CODE=330
-VERSION_NAME=3.3.0-SNAPSHOT
+VERSION_NAME=3.3.0
 
 POM_NAME=Segment for Android
 POM_DESCRIPTION=The hassle-free way to add analytics to your Android app.
