Move Samples into their own subfolder

--- a/settings.gradle
+++ b/settings.gradle
@@ -19,5 +19,5 @@ include 'analytics-integrations:taplytics'
 include 'analytics-integrations:uxcam'
 include 'analytics-wear'
 include 'analytics'
-include 'analytics-sample'
-include 'analytics-wear-sample'
+include 'analytics-samples:analytics-sample'
+include 'analytics-samples:analytics-wear-sample'
