Create structure of integration

--- a/settings.gradle
+++ b/settings.gradle
@@ -17,6 +17,7 @@ include 'analytics-integrations:quantcast'
 include 'analytics-integrations:tapstream'
 include 'analytics-integrations:taplytics'
 include 'analytics-integrations:uxcam'
+include 'analytics-integrations:followanalytics'
 include 'analytics-wear'
 include 'analytics'
 include 'analytics-samples:analytics-sample'
