--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 GROUP=com.segment.analytics.android
 
-VERSION_CODE=333
-VERSION_NAME=3.3.3
+VERSION_CODE=334
+VERSION_NAME=3.3.4-SNAPSHOT
 
 POM_NAME=Segment for Android
 POM_DESCRIPTION=The hassle-free way to add analytics to your Android app.
