[gradle-release-task] prepare for next development iteration

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 GROUP=com.segment.analytics.android
 
-VERSION_CODE=340
-VERSION_NAME=3.4.0
+VERSION_CODE=341
+VERSION_NAME=3.4.1-SNAPSHOT
 
 POM_NAME=Segment for Android
 POM_DESCRIPTION=The hassle-free way to add analytics to your Android app.
