--- a/analytics-tests/build.gradle
+++ b/analytics-tests/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.library'
+apply plugin: 'checkstyle'
+apply plugin: 'com.f2prateek.checkstyle'
 
 apply from: rootProject.file('gradle/android.gradle')
 
@@ -24,5 +26,9 @@ dependencies {
   compile 'com.squareup.okhttp:mockwebserver:2.3.0'
 }
 
-apply from: rootProject.file('gradle/checkstyle-library.gradle')
+checkstyle {
+  configFile rootProject.file('gradle/checkstyle.xml')
+  showViolations true
+}
+
 apply from: rootProject.file('gradle/attach-jar.gradle')
