--- a/analytics-samples/analytics-sample/build.gradle
+++ b/analytics-samples/analytics-sample/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'checkstyle'
+apply plugin: 'com.f2prateek.checkstyle'
 
 apply from: rootProject.file('gradle/android.gradle')
 
@@ -7,4 +9,7 @@ dependencies {
   compile project(':analytics-wear')
 }
 
-apply from: rootProject.file('gradle/checkstyle-app.gradle')
+checkstyle {
+  configFile rootProject.file('gradle/checkstyle.xml')
+  showViolations true
+}
