--- a/analytics-wear/build.gradle
+++ b/analytics-wear/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.library'
+apply plugin: 'checkstyle'
+apply plugin: 'com.f2prateek.checkstyle'
 
 apply from: rootProject.file('gradle/android.gradle')
 
@@ -7,6 +9,9 @@ dependencies {
   compile 'com.google.android.gms:play-services-wearable:8.1.0'
 }
 
-apply from: rootProject.file('gradle/checkstyle-library.gradle')
-// apply from: rootProject.file('gradle/attach-jar.gradle')
+checkstyle {
+  configFile rootProject.file('gradle/checkstyle.xml')
+  showViolations true
+}
+
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
