--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
   }
   dependencies {
     classpath 'com.android.tools.build:gradle:1.3.1'
+    classpath 'com.f2prateek.checkstyle:checkstyle:1.0.1'
   }
 }
 
@@ -37,9 +38,8 @@ ext {
   compileSdkVersion = 23
   buildToolsVersion = '23.0.1'
 
-  compileJavaVersion = JavaVersion.VERSION_1_7
+  sourceCompatibilityVersion = JavaVersion.VERSION_1_7
+  targetCompatibilityVersion = JavaVersion.VERSION_1_7
 
   preDexLibraries = preDexEnabled && !isCI
-
-  supportLib = 'com.android.support:support-v4:23.0.1'
 }
