--- a/analytics-tests/build.gradle
+++ b/analytics-tests/build.gradle
@@ -7,23 +7,23 @@ apply from: rootProject.file('gradle/android.gradle')
 dependencies {
   compile project(':analytics')
 
-  compile 'junit:junit:4.12'
-  compile('org.robolectric:robolectric:3.0-rc2') {
+  testCompile 'junit:junit:4.12'
+  testCompile('org.robolectric:robolectric:3.0-rc2') {
     exclude group: 'commons-logging', module: 'commons-logging'
     exclude group: 'org.apache.httpcomponents', module: 'httpclient'
   }
 
-  compile 'org.assertj:assertj-core:1.7.1'
+  testCompile 'org.assertj:assertj-core:1.7.1'
 
-  compile 'org.mockito:mockito-core:1.10.19'
+  testCompile 'org.mockito:mockito-core:1.10.19'
 
-  compile 'org.powermock:powermock:1.6.2'
-  compile 'org.powermock:powermock-module-junit4:1.6.2'
-  compile 'org.powermock:powermock-module-junit4-rule:1.6.2'
-  compile 'org.powermock:powermock-api-mockito:1.6.2'
-  compile 'org.powermock:powermock-classloading-xstream:1.6.2'
+  testCompile 'org.powermock:powermock:1.6.2'
+  testCompile 'org.powermock:powermock-module-junit4:1.6.2'
+  testCompile 'org.powermock:powermock-module-junit4-rule:1.6.2'
+  testCompile 'org.powermock:powermock-api-mockito:1.6.2'
+  testCompile 'org.powermock:powermock-classloading-xstream:1.6.2'
 
-  compile 'com.squareup.okhttp:mockwebserver:2.3.0'
+  testCompile 'com.squareup.okhttp:mockwebserver:2.3.0'
 }
 
 checkstyle {
