enable test coverage

--- a/gradle/android.gradle
+++ b/gradle/android.gradle
@@ -21,7 +21,11 @@ android {
     release {
       minifyEnabled false
     }
+    debug {
+      testCoverageEnabled true
+    }
   }
+
 
   compileOptions {
     sourceCompatibility rootProject.ext.sourceCompatibilityVersion
