update artifact names and publish tests

--- a/analytics-tests/build.gradle
+++ b/analytics-tests/build.gradle
@@ -32,3 +32,4 @@ checkstyle {
 }
 
 apply from: rootProject.file('gradle/attach-jar.gradle')
+apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
