Prepare for release 4.0.9.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 GROUP=com.segment.analytics.android
 
 VERSION_CODE=409
-VERSION_NAME=4.0.9-SNAPSHOT
+VERSION_NAME=4.0.9
 
 POM_NAME=Segment for Android
 POM_DESCRIPTION=The hassle-free way to add analytics to your Android app.
