--- a/analytics-tests/build.gradle
+++ b/analytics-tests/build.gradle
@@ -14,6 +14,7 @@ dependencies {
   }
 
   testCompile 'org.assertj:assertj-core:1.7.1'
+  testCompile 'com.squareup.assertj:assertj-android:1.1.1'
 
   testCompile 'org.mockito:mockito-core:1.10.19'
 
