--- a/analytics-tests/build.gradle
+++ b/analytics-tests/build.gradle
@@ -17,6 +17,7 @@ dependencies {
   testCompile 'com.squareup.assertj:assertj-android:1.1.1'
 
   testCompile 'org.mockito:mockito-core:1.10.19'
+  testCompile 'com.squareup.okio:okio:1.10.0'
 
   testCompile 'org.powermock:powermock:1.6.2'
   testCompile 'org.powermock:powermock-module-junit4:1.6.2'
