--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 GROUP=com.segment.analytics.android
 
-VERSION_CODE=417
-VERSION_NAME=4.1.7-SNAPSHOT
+VERSION_CODE=420
+VERSION_NAME=4.2.0
 
 POM_NAME=Segment for Android
 POM_DESCRIPTION=The hassle-free way to add analytics to your Android app.
