--- a/analytics-samples/analytics-sample/src/main/AndroidManifest.xml
+++ b/analytics-samples/analytics-sample/src/main/AndroidManifest.xml
@@ -62,7 +62,9 @@
     <service
         android:name="com.segment.analytics.PhoneAnalyticsListenerService">
       <intent-filter>
-        <action android:name="com.google.android.gms.wearable.BIND_LISTENER"/>
+        <action android:name="com.google.android.gms.wearable.DATA_CHANGED" />
+        <action android:name="com.google.android.gms.wearable.MESSAGE_RECEIVED" />
+        <data android:scheme="wear" android:host="*" android:pathPrefix="/analytics" />
       </intent-filter>
     </service>
 
