--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 GROUP=com.segment.analytics.android
 
 VERSION_CODE=422
-VERSION_NAME=4.2.2-SNAPSHOT
+VERSION_NAME=4.2.2
 
 POM_NAME=Segment for Android
 POM_DESCRIPTION=The hassle-free way to add analytics to your Android app.
