--- a/analytics-tests/build.gradle
+++ b/analytics-tests/build.gradle
@@ -8,7 +8,7 @@ dependencies {
   compile project(':analytics')
 
   testCompile 'junit:junit:4.12'
-  testCompile('org.robolectric:robolectric:3.0-rc2') {
+  testCompile('org.robolectric:robolectric:3.1.4') {
     exclude group: 'commons-logging', module: 'commons-logging'
     exclude group: 'org.apache.httpcomponents', module: 'httpclient'
   }
