--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
   dependencies {
     classpath 'com.android.tools.build:gradle:2.2.3'
     classpath 'com.f2prateek.checkstyle:checkstyle:1.0.1'
+    classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.5.0'
   }
 }
 
