--- a/analytics/build.gradle
+++ b/analytics/build.gradle
@@ -16,6 +16,7 @@ dependencies {
   testCompile 'org.mockito:mockito-core:1.10.19'
   testCompile 'com.squareup.okio:okio:1.10.0'
   testCompile 'com.squareup.okhttp:mockwebserver:2.3.0'
+  testCompile 'com.squareup.burst:burst-junit4:1.1.1'
 }
 
 checkstyle {
