update code styles with google java format
1. Updates Codestyle with
https://github.com/checkstyle/checkstyle/blob/master/src/main/resources/google_checks.xml
2. Use newer version of Codestyle/
3. Run `make fmt`.
4. Add IntelliJ codestyles.
5. Verify fmt is run in CI.

--- a/analytics-samples/analytics-sample/build.gradle
+++ b/analytics-samples/analytics-sample/build.gradle
@@ -14,6 +14,7 @@ dependencies {
 }
 
 checkstyle {
-  configFile rootProject.file('gradle/checkstyle.xml')
+  configFile rootProject.file('codestyle/checkstyle.xml')
+  toolVersion = "7.5.1"
   showViolations true
 }
