--- a/analytics-wear/build.gradle
+++ b/analytics-wear/build.gradle
@@ -10,7 +10,8 @@ dependencies {
 }
 
 checkstyle {
-  configFile rootProject.file('gradle/checkstyle.xml')
+  configFile rootProject.file('codestyle/checkstyle.xml')
+  toolVersion = "7.5.1"
   showViolations true
 }
 
