--- a/analytics/build.gradle
+++ b/analytics/build.gradle
@@ -20,7 +20,8 @@ dependencies {
 }
 
 checkstyle {
-  configFile rootProject.file('gradle/checkstyle.xml')
+  configFile rootProject.file('codestyle/checkstyle.xml')
+  toolVersion = "7.5.1"
   showViolations true
 }
 
