--- a/circle.yml
+++ b/circle.yml
@@ -23,6 +23,7 @@ dependencies:
 
 test:
   override:
+    - .buildscript/verify-fmt.sh
     - TERM=dumb ./gradlew build --profile
   post:
     - mkdir -p $CIRCLE_TEST_REPORTS/junit/
