--- a/analytics-tests/build.gradle
+++ b/analytics-tests/build.gradle
@@ -1,17 +1,9 @@
 apply plugin: 'com.android.library'
-apply plugin: 'checkstyle'
-apply plugin: 'com.f2prateek.checkstyle'
-
+apply plugin: 'com.f2prateek.javafmt'
 apply from: rootProject.file('gradle/android.gradle')
 
 dependencies {
   compile project(':analytics')
-}
-
-checkstyle {
-  configFile rootProject.file('codestyle/checkstyle.xml')
-  toolVersion = "7.5.1"
-  showViolations true
 }
 
 apply from: rootProject.file('gradle/attach-jar.gradle')
