--- a/analytics-wear/build.gradle
+++ b/analytics-wear/build.gradle
@@ -1,18 +1,10 @@
 apply plugin: 'com.android.library'
-apply plugin: 'checkstyle'
-apply plugin: 'com.f2prateek.checkstyle'
-
+apply plugin: 'com.f2prateek.javafmt'
 apply from: rootProject.file('gradle/android.gradle')
 
 dependencies {
   compile project(':analytics')
   compile 'com.google.android.gms:play-services-wearable:9.4.0'
-}
-
-checkstyle {
-  configFile rootProject.file('codestyle/checkstyle.xml')
-  toolVersion = "7.5.1"
-  showViolations true
 }
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
