--- a/analytics/build.gradle
+++ b/analytics/build.gradle
@@ -1,8 +1,6 @@
 apply plugin: 'com.android.library'
-apply plugin: 'checkstyle'
-apply plugin: 'com.f2prateek.checkstyle'
 apply plugin: 'com.vanniktech.android.junit.jacoco'
-
+apply plugin: 'com.f2prateek.javafmt'
 apply from: rootProject.file('gradle/android.gradle')
 
 dependencies {
@@ -17,12 +15,6 @@ dependencies {
   testCompile 'com.squareup.okio:okio:1.10.0'
   testCompile 'com.squareup.okhttp:mockwebserver:2.3.0'
   testCompile 'com.squareup.burst:burst-junit4:1.1.1'
-}
-
-checkstyle {
-  configFile rootProject.file('codestyle/checkstyle.xml')
-  toolVersion = "7.5.1"
-  showViolations true
 }
 
 apply from: rootProject.file('gradle/attach-jar.gradle')
