Update Gradle Android plugin and license.
Also updates CI script to force copy. This fixes an issue on CI where the updated licenses file wasn't being copied, causing builds to fail.

--- a/circle.yml
+++ b/circle.yml
@@ -9,7 +9,7 @@ dependencies:
     - /home/ubuntu/.gradle
     - /home/ubuntu/.m2
   override:
-    - cp -R .buildscript/licenses $ANDROID_HOME/licenses
+    - cp -fR .buildscript/licenses $ANDROID_HOME/licenses
     - TERM=dumb ./gradlew dependencies
 
 test:
