Update for Android SDK version 26.
This also updates the supportAnnotations dependency to match the SDK versions and forces the CI to download the latest platform-tools and tools packages.

--- a/circle.yml
+++ b/circle.yml
@@ -9,6 +9,7 @@ dependencies:
     - /home/ubuntu/.gradle
     - /home/ubuntu/.m2
   override:
+    - echo y | android update sdk --no-ui --all --filter "platform-tools,tools"
     - cp -fR .buildscript/licenses $ANDROID_HOME/licenses
     - TERM=dumb ./gradlew dependencies
 
