Enable text report for lint.
This is helpful on CI.

--- a/gradle/android.gradle
+++ b/gradle/android.gradle
@@ -32,6 +32,8 @@ android {
   }
 
   lintOptions {
+    textReport true
+    textOutput 'stdout'
     disable 'InvalidPackage', 'GradleCompatible'
   }
 }
