--- a/analytics/build.gradle
+++ b/analytics/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'com.getkeepsafe.dexcount'
 apply from: rootProject.file('gradle/android.gradle')
 
 dependencies {
-  compile 'com.android.support:support-annotations:25.3.1'
+  compile rootProject.ext.deps.supportAnnotations
 
   testCompile 'junit:junit:4.12'
   testCompile('org.robolectric:robolectric:3.5') {
