Migrate tests to webhook-e2e
Since Runscope has shut down this product, migrate to our own webhook-e2e replacement.

Start testing on Nexus 6 too, but don't test on multiple locales/orientations.

--- a/analytics-samples/analytics-sample/build.gradle
+++ b/analytics-samples/analytics-sample/build.gradle
@@ -3,15 +3,15 @@ apply plugin: 'com.f2prateek.javafmt'
 
 apply from: rootProject.file('gradle/android.gradle')
 
-def RUNSCOPE_TOKEN = ""
+def WEBHOOK_AUTH_USERNAME = ""
 def RUN_E2E_TESTS = false
 
-// e2e_test.properties is a file with a single line: RUNSCOPE_TOKEN=<token>
+// e2e_test.properties is a file with a single line: WEBHOOK_AUTH_USERNAME=<token>
 def e2eTestPropertiesFile = file('e2e_test.properties')
 if (e2eTestPropertiesFile.exists()) {
   def props = new Properties()
   file(e2eTestPropertiesFile).withInputStream { stream -> props.load(stream) }
-  RUNSCOPE_TOKEN = props.getProperty("RUNSCOPE_TOKEN")
+  WEBHOOK_AUTH_USERNAME = props.getProperty("WEBHOOK_AUTH_USERNAME")
   RUN_E2E_TESTS = true
 }
 
@@ -24,7 +24,7 @@ android {
   defaultConfig {
     testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
-    buildConfigField 'String', 'RUNSCOPE_TOKEN', "\"$RUNSCOPE_TOKEN\""
+    buildConfigField 'String', 'WEBHOOK_AUTH_USERNAME', "\"$WEBHOOK_AUTH_USERNAME\""
     buildConfigField 'boolean', 'RUN_E2E_TESTS', "$RUN_E2E_TESTS"
   }
 }
@@ -44,4 +44,6 @@ dependencies {
   androidTestImplementation 'com.android.support.test:runner:1.0.2'
   androidTestImplementation 'com.android.support.test:rules:1.0.2'
   androidTestImplementation 'com.segment.backo:backo:1.0.0'
+
+  androidTestImplementation 'org.assertj:assertj-core:1.7.1'
 }
