--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
           name: Copy E2E Test Credentials
           command: |
             if [ "${RUN_E2E_TESTS}" == "true" ]; then
-              echo "RUNSCOPE_TOKEN=${RUNSCOPE_TOKEN}" >> "analytics-samples/analytics-sample/e2e_test.properties"
+              echo "WEBHOOK_AUTH_USERNAME=${WEBHOOK_AUTH_USERNAME}" >> "analytics-samples/analytics-sample/e2e_test.properties"
             fi
       - run:
           name: Build
@@ -32,7 +32,7 @@ jobs:
               unzip -qq google-cloud-sdk.zip
               ./google-cloud-sdk/bin/gcloud config set project analytics-android-e2e-test
               ./google-cloud-sdk/bin/gcloud auth activate-service-account --key-file secret.json
-              ./google-cloud-sdk/bin/gcloud firebase test android run --app analytics-samples/analytics-sample/build/outputs/apk/debug/analytics-sample-debug.apk  --test analytics-samples/analytics-sample/build/outputs/apk/androidTest/debug/analytics-sample-debug-androidTest.apk --device-ids sailfish,hammerhead --os-version-ids 19,21,22,23,24,25,26,27 --locales en,fr --orientations portrait
+              ./google-cloud-sdk/bin/gcloud firebase test android run --app analytics-samples/analytics-sample/build/outputs/apk/debug/analytics-sample-debug.apk --test analytics-samples/analytics-sample/build/outputs/apk/androidTest/debug/analytics-sample-debug-androidTest.apk --device-ids Nexus6,hammerhead,sailfish --os-version-ids 19,21,22,23,24,25,26,27
             fi
       - save_cache:
           paths:
