Schedule e2e tests every 20 minutes past the hour

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,3 +49,19 @@ jobs:
             else
               echo "==> ignoring non-master branch"
             fi
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build
+  scheduled_e2e_test:
+    triggers:
+      - schedule:
+          cron: "20 * * * *"
+          filters:
+            branches:
+              only:
+                - master
+                - scheduled_e2e_testing
+    jobs:
+      - build
